# code-review

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  action.yml  package.json  pyproject.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
code-review/: action.yml  reviewer.py
code-review/tests/: test_reviewer.py
crates/code-review-cli/: Cargo.toml
crates/code-review-cli/src/: config.rs  error.rs  github.rs  main.rs  review.rs  source.rs  vllm.rs
crates/docgen-cli/: Cargo.toml
crates/docgen-cli/src/: apply.rs  cli.rs  detect.rs  main.rs  process.rs  resolver.rs
crates/toolkit-core/: Cargo.toml
crates/toolkit-core/src/: config.rs  error.rs  git.rs  lib.rs  vllm.rs
docgen/: docgen.py
docgen/tests/: test_docgen.py
docs/: code-review.md  docgen.md
docs/issue/: improvement-review-template-and-summarization.md
docs/plans/: 2026-05-12-github-actions-workflow.md  review-pipeline-accuracy.md
docs/specs/: 2026-05-12-github-actions-workflow-design.md
docs/superpowers/specs/: 2026-05-11-docgen-cli-design.md
scripts/: npm-postinstall.js
