[project]
name            = "ai-devops-toolkit"
version         = "0.1.0"
description     = "AI DevOps Toolkit"
requires-python = ">=3.11"
dependencies    = []

[build-system]
requires      = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings      = "bin"
manifest-path = "crates/docgen-cli/Cargo.toml"

[tool.uv]
dev-dependencies = [
    "maturin>=1.5,<2.0",
]
