[package]
name    = "code-review-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "code-review-cli"
path = "src/main.rs"

[dependencies]
toolkit-core = { path = "../toolkit-core" }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde_json   = { workspace = true }
octocrab     = "0.41"
async-openai = "0.27"
