[package]
name = "code-review-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "code-review-cli"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
dotenvy = { workspace = true }
octocrab = "0.41"
git2 = { version = "0.21", features = ["vendored-openssl"] }

[dev-dependencies]
serial_test = "3"
