[package]
name    = "docgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docgen"
path = "src/main.rs"

[dependencies]
toolkit-core           = { path = "../toolkit-core" }
clap                   = { workspace = true }
tokio                  = { workspace = true }
rayon                  = "1"
tree-sitter            = "0.25"
tree-sitter-python     = "0.25"
tree-sitter-typescript = "0.23"
futures                = "0.3"
git2                   = { version = "0.19", features = ["vendored-openssl"] }
chrono                 = { version = "0.4", features = ["clock"] }
dotenvy                = { workspace = true }

[dev-dependencies]
tempfile = "3"
