[package]
name    = "toolkit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
miette     = { workspace = true }
git2       = { version = "0.20", features = ["vendored-openssl"] }

[dev-dependencies]
serial_test = "3"
